--- a/src/components/Loader/Loader.module.css
+++ b/src/components/Loader/Loader.module.css
@@ -1,10 +1,6 @@
 .loader {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.loadertext {
-    
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   height: 100vh;
 }
